crates/amaru-observability/macros/tests/ui/compile_fail/custom_expr_unknown_field.stderr
error: Unknown field 'typo_field' for schema STRICT_TEST. Available fields: actual_field, optional_field
  --> tests/ui/compile_fail/custom_expr_unknown_field.rs:23:1
   |
23 | / define_local_schemas! {
24 | |     test {
25 | |         example {
26 | |             /// Test schema for custom expression validation
...  |
33 | | }
   | |_^
...
42 |       let _span = trace_span!(test::example::STRICT_TEST, actual_field = &actual_field, typo_field = get_value());
   |                   ----------------------------------------------------------------------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `__TEST__EXAMPLE__STRICT_TEST_RECORD` which comes from the expansion of the macro `trace_span` (in Nightly builds, run with -Z macro-backtrace for more info)
